Bug 525948: [9][JUnit] Cannot run JUnit tests in a module project
Change-Id: I7262ff291f9b4df36d819fd1e8a41e7019552acf